--- a/intro.dita
+++ b/intro.dita
@@ -8,7 +8,7 @@
             клиента, установленного в операционной системе.</p>
         <p>Приложение <wintitle conkeyref="images/taskschd"/> является стандартным для операционной
             системы Microsoft Windows 10. Наименование приложения и элементов интерфейса в настоящей
-            инструкции указано для <b><text product="ru">русской</text><text product="en"
+            инструкции указано для <b><text otherprops="lang-ru">русской</text><text otherprops="lang-en"
                     >английской</text></b> версии интерфейса операционной системы.</p>
         <p>Инструкция предназначена для сотрудников, выполняющих администрирование операционных систем
             семейства Windows в организации. </p>
